# OctoberPlayer

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/qzr/octoberplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/media/decoder/: base_decoder.cpp  base_decoder.h  decode_state.h  i_decoder.h
app/src/main/cpp/media/decoder/audio/: a_decoder.cpp  a_decoder.h
app/src/main/cpp/media/decoder/video/: v_decoder.cpp  v_decoder.h
app/src/main/cpp/media/player/: player.cpp  player.h
app/src/main/cpp/media/render/audio/: audio_render.h  opensl_render.cpp  opensl_render.h
app/src/main/cpp/media/render/video/: video_render.h
app/src/main/cpp/media/render/video/native_render/: native_render.cpp  native_render.h
app/src/main/java/com/qzr/octoberplayer/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/qzr/octoberplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
